[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/gameplay_scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/arrow_button_scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://image_textures/line.png" type="Texture" id=3]
[ext_resource path="res://image_textures/bg_solid_color.png" type="Texture" id=4]
[ext_resource path="res://image_textures/x.png" type="Texture" id=5]
[ext_resource path="res://fonts/HULifeStyle_m.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/music_conductor.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 6 )

[node name="gameplay_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="background_image" type="TextureRect" parent="."]
light_mask = 0
margin_left = -236.0
margin_top = -120.0
margin_right = 1684.0
margin_bottom = 960.0
texture = ExtResource( 4 )

[node name="note_guildeline_one" type="TextureRect" parent="background_image"]
light_mask = 0
margin_left = 81.0
margin_top = 80.0
margin_right = 599.0
margin_bottom = 744.0
texture = ExtResource( 3 )
expand = true

[node name="note_guildeline_two" type="TextureRect" parent="background_image"]
light_mask = 0
margin_left = 177.0
margin_top = 80.0
margin_right = 695.0
margin_bottom = 744.0
texture = ExtResource( 3 )
expand = true

[node name="note_guildeline_three" type="TextureRect" parent="background_image"]
light_mask = 0
margin_left = 272.0
margin_top = 81.0
margin_right = 790.0
margin_bottom = 745.0
texture = ExtResource( 3 )
expand = true

[node name="note_guildeline_four" type="TextureRect" parent="background_image"]
light_mask = 0
margin_left = 366.0
margin_top = 81.0
margin_right = 884.0
margin_bottom = 745.0
texture = ExtResource( 3 )
expand = true

[node name="note_guildeline_five" type="TextureRect" parent="background_image"]
light_mask = 0
margin_left = 463.0
margin_top = 82.0
margin_right = 981.0
margin_bottom = 746.0
texture = ExtResource( 3 )
expand = true

[node name="quit_button" type="Button" parent="."]
margin_left = 959.0
margin_top = 3.0
margin_right = 1022.0
margin_bottom = 60.0
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="up_arrow" parent="." instance=ExtResource( 2 )]
position = Vector2( 246, 548 )
animation = "Up"
input = "ui_up"

[node name="down_arrow" parent="." instance=ExtResource( 2 )]
position = Vector2( 342, 547 )
animation = "Down"
input = "ui_down"

[node name="left_arrow" parent="." instance=ExtResource( 2 )]
position = Vector2( 152, 548 )
input = "ui_left"

[node name="right_arrow" parent="." instance=ExtResource( 2 )]
position = Vector2( 439, 548 )
animation = "Right"
input = "ui_right"

[node name="score" type="Label" parent="."]
margin_left = 627.0
margin_top = 156.0
margin_right = 889.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
valign = 1

[node name="scorebox" type="Label" parent="score"]
margin_left = -2.0
margin_top = 80.0
margin_right = 264.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="music_conductor" parent="." instance=ExtResource( 7 )]

[connection signal="ready" from="." to="." method="_on_gameplay_scene_ready"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="music_conductor" to="." method="_on_music_conductor_finished"]
[connection signal="spawn" from="music_conductor" to="." method="_on_music_conductor_spawn"]
